Fixed 'Previous Hacks' sections on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3212,8 +3212,6 @@ body.index #main {
   color: #fff;
   padding-top: 2em;
   padding-bottom: 5em;
-  padding-left: 9em;
-  padding-right: 9em;
   text-align: center;
 }
 
